[#109] Fix: 소비 루틴용 금액 테이블 생성 및 상세 조회 수정